add xmx and maxpermsize. And run !